tests/NormalTests/paczka1/small_fuzzy/19435988.err
Error in line 7: LGa866ZT5 A744 16,4
Error in line 6: jrtlOf S386 10,8
